--- a/frontend.html
+++ b/frontend.html
@@ -38,6 +38,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://apply.workable.com/collectai/j/11C51D6758/'>Software Engineer Frontend (f/m/d) - collect Artificial Intelligence GmbH</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Verisk/743999698669729-front-end-web-developer'>Verisk Front End Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Lehi, UT, USA</span></p>
 <p>Posted on: 2019-11-01</p>
@@ -62,7 +66,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://simscale.join.com/jobs/468441-senior-frontend-developer-m-f-d'>Job @ SimScale (Munich): Senior Frontend Developer... | JOIN</a></h5> 
+<h5><a href='https://simscale.join.com/jobs/468441-senior-frontend-developer-m-f-d'>Job @ SimScale (Munich): Senior Frontend Developer... | JOIN</a></h5> 
 <p><span class="badge badge-light">Munich Munich Munich</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -98,7 +102,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/gitlab/jobs/4502532002'>Job Application for Frontend Engineer, Secure at GitLab</a></h5> 
+<h5><a href='https://boards.greenhouse.io/gitlab/jobs/4502532002'>Job Application for Frontend Engineer, Secure at GitLab</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -134,7 +138,7 @@
 <p><span class="badge badge-light">Tennessee United States  North America</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CITECH/743999698497102-developpeur-front-end-h-f-'>CITECH D?veloppeur Front-End (H/F) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CITECH/743999698497102-developpeur-front-end-h-f-'>CITECH D?veloppeur Front-End (H/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France  France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -162,7 +166,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ambassador/e0f9cbe5-85ad-44ce-83a2-ca80d6b97c35'>Ambassador - Sr. Front-end Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/ambassador/e0f9cbe5-85ad-44ce-83a2-ca80d6b97c35'>Ambassador - Sr. Front-end Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -188,7 +192,7 @@
 <p><span class="badge badge-light">Portland, Oregon</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/consensys/jobs/1941455'>Job Application for Front End Developer at Consensys</a></h5> 
+<h5><a href='https://boards.greenhouse.io/consensys/jobs/1941455'>Job Application for Front End Developer at Consensys</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -216,7 +220,7 @@
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/heycar/jobs/4499234002'>Job Application for Frontend Engineer (m/f/d) at heycar</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/heycar/jobs/4499234002'>Job Application for Frontend Engineer (m/f/d) at heycar</a></h5> 
 <p><span class="badge badge-light">Berlin  Berlin</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -260,7 +264,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://skatedeluxe.join.com/jobs/454760-frontend-entwickler-w-m-d'>Job @ skatedeluxe Skateshop (Jena): Frontend Entwi... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://skatedeluxe.join.com/jobs/454760-frontend-entwickler-w-m-d'>Job @ skatedeluxe Skateshop (Jena): Frontend Entwi... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -290,7 +294,7 @@
 <p><span class="badge badge-light">Kerala, India</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Veeam2/743999698573523-front-end-developer-aem-'>Veeam Front-End Developer (AEM) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Veeam2/743999698573523-front-end-developer-aem-'>Veeam Front-End Developer (AEM) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -352,7 +356,7 @@
 <p><span class="badge badge-light">Krakow, Poland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/elementai/jobs/1919939'>Job Application for D?veloppeur(euse) front-end - AI Enablement | Front-End Developer - AI Enablement  at Element AI</a></h5> 
+<h5><a href='https://boards.greenhouse.io/elementai/jobs/1919939'>Job Application for D?veloppeur(euse) front-end - AI Enablement | Front-End Developer - AI Enablement  at Element AI</a></h5> 
 <p><span class="badge badge-light">Montreal</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -360,11 +364,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://tsitrone.join.com/jobs/467489-frontend-web-entwickler-in-koeln-m-w'>Job @ tsitrone medien + Co. KG (K?ln): Frontend We... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tsitrone.join.com/jobs/467489-frontend-web-entwickler-in-koeln-m-w'>Job @ tsitrone medien + Co. KG (K?ln): Frontend We... | JOIN</a></h5> 
 <p><span class="badge badge-light">K?ln, Deutschland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://4finance.recruiterbox.com/jobs/fk03ioy/'>
+<h5><a href='https://4finance.recruiterbox.com/jobs/fk03ioy/'>
     Senior Frontend Developer at 4Finance IT
 </a></h5> 
 <p><span class="badge badge-light">Prague</span></p>
@@ -386,7 +390,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999698289067-senior-software-engineer-front-end'>Optimizely Senior Software Engineer, Front End | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999698289067-senior-software-engineer-front-end'>Optimizely Senior Software Engineer, Front End | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -406,7 +410,7 @@
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oH5T8fwx&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=ngybpMwF'>Guidewire Software, Inc. Careers - Software Engineer, Front End - Krakow, Poland</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oH5T8fwx&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=ngybpMwF'>Guidewire Software, Inc. Careers - Software Engineer, Front End - Krakow, Poland</a></h5> 
 <p><span class="badge badge-light">Krakow, Poland  Krakow, Poland  Krakow, Poland</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -444,10 +448,6 @@
 <hr/>
 <h5><a href='https://homeday.join.com/jobs/471067-frontend-engineer-m-f-x'>Job @ Homeday (Berlin): Frontend Engineer (m/f/x) | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dataminr/jobs/1937506'>Job Application for Software Engineer II, Front End at Dataminr</a></h5> 
-<p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 
