--- a/project-manager.html
+++ b/project-manager.html
@@ -41,16 +41,16 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qXJ9Vfwu&k=Job&j=o1ncbfwv&__jvst=Employee&__jvsd=sdL0qgw9&__jvsc=Twitter&bid=nCyRqMwI'>Forescout Technologies Inc. Careers - Professional Services Project Manager</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
 <h5><a href='https://postings.com/recruiter-1130798/jobs/science-biotech/u-s-remote-clinical-project-manager-in-vitro-diagnostics-durham-nc-27703/84025'>
 U.S. Remote Clinical Project Manager - In-Vitro Diagnostics in Durham, from NeedLS, by Lori Steiner
 </a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Durham, NC</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=ofcYafwj&__jvst=Employee+Referral&__jvsd=sNYIIhwX&__jvsc=Twitter&bid=ntwPqMwv'>Nexidia Careers - Sr. Technical Project Manager</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=ofcYafwj&__jvst=Employee+Referral&__jvsd=sNYIIhwX&__jvsc=Twitter&bid=ntwPqMwv'>Nexidia Careers - Sr. Technical Project Manager</a></h5> 
 <p><span class="badge badge-light">Atlanta, Georgia</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -82,7 +82,7 @@ U.S. Remote Clinical Project Manager - In-Vitro Diagnostics in Durham, from Need
 <p><span class="badge badge-light">Montreal, QCCanada</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Inmarsat/743999698666100-programme-manager-aviation'>Inmarsat Programme Manager, Aviation | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Inmarsat/743999698666100-programme-manager-aviation'>Inmarsat Programme Manager, Aviation | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -110,15 +110,15 @@ U.S. Remote Clinical Project Manager - In-Vitro Diagnostics in Durham, from Need
 <p><span class="badge badge-light">Lehi, UT</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=oLoibfwm&__jvst=Employee+Referral&__jvsd=sbDU6fwy&__jvsc=Twitter&bid=npwyqMwa'>Cirrus Logic Careers - SAP Program Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=oLoibfwm&__jvst=Employee+Referral&__jvsd=sbDU6fwy&__jvsc=Twitter&bid=npwyqMwa'>Cirrus Logic Careers - SAP Program Manager</a></h5> 
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qJGaVfwe&k=Job&j=oirjbfwX&__jvst=JobVite+Referral&__jvsd=sQFzShwI&__jvsc=Twitter&bid=nxbxqMwW'>IDEA Public Schools Careers - EIR Project Manager (Immediate Opening)</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qJGaVfwe&k=Job&j=oirjbfwX&__jvst=JobVite+Referral&__jvsd=sQFzShwI&__jvsc=Twitter&bid=nxbxqMwW'>IDEA Public Schools Careers - EIR Project Manager (Immediate Opening)</a></h5> 
 <p><span class="badge badge-light">SAN ANTONIO, TEXAS</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/workiva/job/o5Qrbfwh'>Workiva Inc. Careers - Onboarding Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/workiva/job/o5Qrbfwh'>Workiva Inc. Careers - Onboarding Project Manager</a></h5> 
 <p><span class="badge badge-light">Denver, Colorado  New York, New York  Scottsdale, Arizona</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -146,7 +146,7 @@ U.S. Remote Clinical Project Manager - In-Vitro Diagnostics in Durham, from Need
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698640925-sr-project-manager-global-business-operations-excellence'>Biogen Sr. Project Manager, Global Business Operations Excellence | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698640925-sr-project-manager-global-business-operations-excellence'>Biogen Sr. Project Manager, Global Business Operations Excellence | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -398,7 +398,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">Minneapolis, MN Minneapolis</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://www.ihireengineering.com/jobs/view/253074816?utm_campaign=Employer+Job+Tweets&utm_content=Twitter&utm_term=2019-10-31&utm_medium=Social'>Project Engineer / Assistant Project Manager - Irvine, </a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.ihireengineering.com/jobs/view/253074816?utm_campaign=Employer+Job+Tweets&utm_content=Twitter&utm_term=2019-10-31&utm_medium=Social'>Project Engineer / Assistant Project Manager - Irvine, </a></h5> 
 <p><span class="badge badge-light">Irvine California  Irvine California</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -438,7 +438,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cygnal/jobs/4503137002'>Job Application for Research Project Manager at Cygnal</a></h5> 
+<h5><a href='https://boards.greenhouse.io/cygnal/jobs/4503137002'>Job Application for Research Project Manager at Cygnal</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
